--- a/app/src/main/res/layout/fragment_sub_detail.xml
+++ b/app/src/main/res/layout/fragment_sub_detail.xml
@@ -52,52 +52,98 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/textView7"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
                         android:layout_marginTop="0dp"
                         android:text="URL"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:layout_marginLeft="5dp" />
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 
                     <EditText
-                        android:id="@+id/urlText"
+                        android:id="@+id/text_url"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
+                        android:focusable="false"
                         android:inputType="textWebEditText"
                         android:paddingLeft="5dp"
                         android:singleLine="true"
-                        android:textSize="16dp"
-                        android:focusable="false" />
+                        android:textSize="16dp" />
+
+                    <EditText
+                        android:id="@+id/text_id"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:focusable="false"
+                        android:inputType="textWebEditText"
+                        android:paddingLeft="5dp"
+                        android:singleLine="true"
+                        android:textSize="16dp" />
                     <!--android:hint="@string/hint_url"-->
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/content_title"
+                <LinearLayout
+                    android:id="@+id/layout_titile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left|center_horizontal"
-                    android:layout_marginTop="5dp"
-                    android:text="Title"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:layout_marginLeft="5dp" />
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/text_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:paddingLeft="5dp"
-                    android:textSize="16dp" />
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <com.android.volley.toolbox.NetworkImageView
+                            android:id="@+id/share_img"
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:layout_alignParentBottom="false"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentRight="false"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignWithParentIfMissing="false"
+                            android:layout_margin="5dp"
+                            android:scaleType="fitXY" />
+
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/content_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="left|center_horizontal"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="5dp"
+                            android:text="Title"
+                            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                        <EditText
+                            android:id="@+id/text_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:paddingLeft="5dp"
+                            android:singleLine="true"
+                            android:textSize="16dp" />
+                    </LinearLayout>
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/linearLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:orientation="vertical">
 
                     <TextView
@@ -110,9 +156,9 @@
                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
                     <EditText
-                        android:id="@+id/editText"
+                        android:id="@+id/text_content"
                         android:layout_width="fill_parent"
-                        android:layout_height="170dp"
+                        android:layout_height="180dp"
                         android:layout_marginBottom="5dp"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/edit_border"
