--- a/app/src/main/res/layout/fragment_sub_list.xml
+++ b/app/src/main/res/layout/fragment_sub_list.xml
@@ -18,19 +18,26 @@
         android:background="@drawable/edit_border"
         android:hint="Search.."
         android:inputType="textVisiblePassword"
-        android:textSize="16dp"
+        android:paddingBottom="8dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="8dp"
-        android:paddingBottom="8dp" />
+        android:textSize="16dp" />
 
-    <swipemenulistview.SwipeMenuListView
-        android:id="@+id/listView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/inputSearch"
-        android:layout_marginBottom="60dp" />
+        android:layout_marginBottom="60dp">
+
+        <swipemenulistview.SwipeMenuListView
+            android:id="@+id/listView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/inputSearch" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
